# iox_lrpc

./: .gitignore  CMakeLists.txt  README.md  makefile  roudi_config_lrpc.toml
doc/: lrpc.md
include/iox_lrpc/: client.h  server.h
include/lrpc/: client.h  server.h
test/: test_lrpc.cpp  test_lrpc_client.cc  test_lrpc_message.h  test_lrpc_server.cc
